# clef2026-checkthat-task2

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml  ruff.toml
.claude/commands/docs/: concept.md  reference.md  vendor.md
.claude/commands/experiment/: proposal.md  result.md  validate.md
Codes/EDA/: EDA.py  requirements.txt
Data/: README.md
Sagnik_Code/BaselineCode/: train_verifier.ipynb
Sagnik_Code/Code/: Test1.Py
Sagnik_Code/Results/: Results1.csv
data_prep/: build_reasoning_traces.py
docs/: README.md
docs/_templates/: concept.md  experiment-design.md  experiment-proposal.md  experiment-result.md  experiment-tasks.md  reference.md
docs/guides/: agent-tooling.md  claude-commands.md  getting-started.md  openspec.md  pace-setup.md
notebooks/: approach1_arabic_arabert.ipynb  approach1_english_qwen.ipynb  approach2_tfidf_reward_model.ipynb
openspec/: config.yaml
skills/experiment/: SKILL.md
skills/pace-cluster/: SKILL.md
skills/research-docs/: SKILL.md
user/example/: README.md
user/example/experiments/000-template/: proposal.md  pyproject.toml  tasks.md
