[project]
name = "000-template"
version = "0.1.0"
description = "Template experiment — copy this to start a new experiment"
authors = [
    { name = "Your Name", email = "you@gatech.edu" },
]
requires-python = ">=3.10"
dependencies = [
    # Core ML/DL (add what you need)
    # "torch>=2.0.0",
    # "torchaudio>=2.0.0",
    # "pytorch-lightning>=2.0.0",
    # "transformers>=4.30.0",

    # Data handling
    # "numpy>=1.24.0",
    # "pandas>=2.0.0",
    # "scikit-learn>=1.3.0",

    # Utilities
    # "tqdm>=4.65.0",
    # "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
